[gd_scene load_steps=4 format=2]

[ext_resource path="res://texture/SuperMario01.tres" type="TileSet" id=1]
[ext_resource path="res://script/Level2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[node name="Level2" type="Node2D"]
script = ExtResource( 2 )

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 8, 0, -65525, 9, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 8, 0, 11, 9, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 131071, 0, 0, 65536, 0, 0, 65560, 0, 0, 65561, 0, 0, 196607, 0, 0, 131072, 0, 0, 131096, 0, 0, 131097, 0, 0, 262143, 0, 0, 196608, 0, 0, 196617, 15, 0, 196620, 15, 0, 196621, 15, 0, 196625, 15, 0, 196632, 0, 0, 196633, 0, 0, 327679, 0, 0, 262144, 0, 0, 262148, 15, 0, 262150, 15, 0, 262152, 15, 0, 262154, 15, 0, 262156, 15, 0, 262158, 15, 0, 262160, 15, 0, 262162, 15, 0, 262164, 15, 0, 262166, 15, 0, 262168, 0, 0, 262169, 0, 0, 393215, 0, 0, 327680, 0, 0, 327684, 15, 0, 327686, 15, 0, 327688, 15, 0, 327690, 15, 0, 327692, 15, 0, 327694, 15, 0, 327696, 15, 0, 327698, 15, 0, 327700, 15, 0, 327702, 15, 0, 327704, 0, 0, 327705, 0, 0, 458751, 0, 0, 393216, 0, 0, 393220, 15, 0, 393221, 15, 0, 393222, 15, 0, 393224, 15, 0, 393225, 15, 0, 393226, 15, 0, 393228, 15, 0, 393230, 15, 0, 393232, 15, 0, 393234, 15, 0, 393236, 15, 0, 393238, 15, 0, 393240, 0, 0, 393241, 0, 0, 524287, 0, 0, 458752, 0, 0, 458756, 15, 0, 458758, 15, 0, 458760, 15, 0, 458762, 15, 0, 458764, 15, 0, 458766, 15, 0, 458768, 15, 0, 458770, 15, 0, 458772, 15, 0, 458774, 15, 0, 458776, 0, 0, 458777, 0, 0, 589823, 0, 0, 524288, 0, 0, 524292, 15, 0, 524294, 15, 0, 524296, 15, 0, 524298, 15, 0, 524300, 15, 0, 524302, 15, 0, 524304, 15, 0, 524306, 15, 0, 524308, 15, 0, 524310, 15, 0, 524312, 0, 0, 524313, 0, 0, 655359, 0, 0, 589824, 0, 0, 589828, 15, 0, 589830, 15, 0, 589832, 15, 0, 589834, 15, 0, 589836, 15, 0, 589837, 15, 0, 589841, 15, 0, 589845, 15, 0, 589848, 0, 0, 589849, 0, 0, 720895, 0, 0, 655360, 0, 0, 655384, 0, 0, 655385, 0, 0, 786431, 0, 0, 720896, 0, 0, 720920, 0, 0, 720921, 0, 0, 851967, 0, 0, 786432, 0, 0, 786456, 0, 0, 786457, 0, 0, 917503, 0, 0, 851968, 0, 0, 851992, 0, 0, 851993, 0, 0, 983039, 0, 0, 917504, 0, 0, 917528, 0, 0, 917529, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983064, 0, 0, 983065, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 6, 0, 1114133, 7, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 8, 0, 1179669, 9, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 8, 0, 1245205, 9, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 360, 48 )

[node name="TubeExit" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="TubeExit"]
position = Vector2( 672, 536 )
shape = SubResource( 1 )
[connection signal="body_entered" from="TubeExit" to="." method="_on_TubeExit_body_entered"]
[connection signal="body_exited" from="TubeExit" to="." method="_on_TubeExit_body_exited"]
